--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -17,10 +17,10 @@
 <!ENTITY Ctr_cuitxt			"文本">
 
 <!ENTITY Ctr_combrelstoptt	"[停止][重新加载] &gt;&gt; [停止-重新加载]">
+<!ENTITY Ctr_tnot			"(标签栏不在顶部)">
 
-<!ENTITY Ctr_main_t			"主要">
 <!ENTITY Ctr_tabcolors_t	"自定义色彩">
-<!ENTITY Ctr_special_t		"高级">
+<!ENTITY Ctr_icons_t		"Favicon &amp; icons">
 
 <!ENTITY Ctr_tabs			"标签页">
 <!ENTITY Ctr_tabs0			"弧形标签页 (Australis 默认)">
@@ -28,20 +28,18 @@
 <!ENTITY Ctr_tabs1m			"方形标签页 (仿 Australis)">
 <!ENTITY Ctr_tabs2			"弧形标签页 (仿 Australis)">
 <!ENTITY Ctr_tabs3			"弧形标签页 (Aero 风格)">
+<!ENTITY Ctr_tabforminfo	"Tab appearance is controlled by the current theme.">
 <!ENTITY Ctr_tabsontop0		"标签栏在顶部 (默认) - [没有设置]">
 <!ENTITY Ctr_tabsontop1		"标签栏在顶部 - 设置 [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"标签栏不在顶部 - 设置 [tabsontop=false]">
 <!ENTITY Ctr_tabsontopI1	"Adds attribute [tabsontop=true/false] to">
-<!ENTITY Ctr_tabsontopI2	"#main-window, #titlebar, #nav-bar">
-<!ENTITY Ctr_tabsontopI3	"#navigator-toolbox, #toolbar-menubar">
-<!ENTITY Ctr_tabsontopI4	"#TabsToolbar, #ctraddon_extra-bar">
-<!ENTITY Ctr_tabsontopI5	"#PersonalToolbar, #ctraddon_addon-bar">
 <!ENTITY Ctr_tabsintitlebar	"标签栏嵌入标题栏 (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(默认)">
 <!ENTITY Ctr_tabwidthcla	"(经典)">
 <!ENTITY Ctr_tabmaxwidth	"最大宽度:">
 <!ENTITY Ctr_tabminwidth	"最小宽度:">
-<!ENTITY Ctr_closetab_0		"标签页关闭按钮: 在所有标签页中显示 (默认)">
+<!ENTITY Ctr_tabwidthinfo	"Tabs min-width and max-width are controlled by TabMixPlus / TabUtilities">
+<!ENTITY Ctr_closetab_0		"标签页关闭按钮 (默认)">
 <!ENTITY Ctr_closetab_1		"标签页关闭按钮: 只在激活的标签页中显示">
 <!ENTITY Ctr_closetab_2		"标签页关闭按钮: 不显示">
 <!ENTITY Ctr_closetab_3		"标签页关闭按钮: 在标签页栏末端">
@@ -67,41 +65,56 @@
 <!ENTITY Ctr_appbuttonc_wh	"白色按钮">
 <!ENTITY Ctr_appbuttonI1	"重启浏览器后生效">
 <!ENTITY Ctr_appbuttonI1e	"在 OS 标题栏上不可见">
-<!ENTITY Ctr_appbuttonI2	"只在标题栏生效">
-<!ENTITY Ctr_appbuttonI3	"以及标签页栏!">
+<!ENTITY Ctr_appbuttonI2	"只在标题栏生效 以及标签页栏!">
 <!ENTITY Ctr_alttbappb		"替代图标">
 <!ENTITY Ctr_appbutmhi		"更高的位置 (在标签页栏上显示)">
 <!ENTITY Ctr_appbutbdl		"隐藏边框和背景色">
+<!ENTITY Ctr_dblclclosefx	"双击关闭当前窗口">
 
 <!ENTITY Ctr_ui				"界面">
-<!ENTITY Ctr_nbiconsize0	"Set navigation toolbar attribute:">
-<!ENTITY Ctr_nbiconsize1	"#nav-bar[iconsize='small'] (默认)">
-<!ENTITY Ctr_nbiconsize2	"#nav-bar[iconsize='large']">
+<!ENTITY Ctr_nbiconsize0	"Set navigation toolbar attribute">
 <!ENTITY Ctr_smallnavbut	"在工具栏上使用小图标">
-<!ENTITY Ctr_hidenavbar		"隐藏工具栏">
-<!ENTITY Ctr_buttons		"工具栏按钮">
+<!ENTITY Ctr_bfurlbarfix	"当处于「后退」按钮可以移动和小图标显示模式时，修改地址栏圆弧半径">
 <!ENTITY Ctr_backforward	"使「后退」按钮可以移动">
+<!ENTITY Ctr_hide_bf_popup	"鼠标长按时隐藏历史菜单">
 <!ENTITY Ctr_wincontrols	"使窗口控制按钮可以移动">
 <!ENTITY Ctr_starinurl		"收藏按钮嵌入地址栏 (需要重启 Firefox!)">
 <!ENTITY Ctr_mstatusbar		"使状态栏面板可以移动">
 <!ENTITY Ctr_hideurelstop	"隐藏地址栏中的停止和重新加载按钮">
 <!ENTITY Ctr_combrelstop	"合并停止和重新加载按钮">
 <!ENTITY Ctr_panelmenucol	"面板菜单: 替代的背景颜色">
-<!ENTITY Ctr_findbar_def	"查找栏 (默认位置)">
-<!ENTITY Ctr_findbar_top	"查找栏在顶部">
-<!ENTITY Ctr_findbar_bot	"查找栏在底部">
-<!ENTITY Ctr_findbar_topa	"查找栏在顶部 (替代)">
-<!ENTITY Ctr_findbar_bota	"查找栏在顶部 (替代)">
+<!ENTITY Ctr_hideprivmask	"隐私浏览: 隐藏面具标志">
+<!ENTITY Ctr_verifiedcolors	"Green/blue identity-box for verified websites">
+<!ENTITY Ctr_findbar		"查找栏">
+<!ENTITY Ctr_findbar_def	"默认位置">
+<!ENTITY Ctr_findbar_top	"在顶部">
+<!ENTITY Ctr_findbar_bot	"在底部">
+<!ENTITY Ctr_findbar_topa	"在顶部 (替代)">
+<!ENTITY Ctr_findbar_bota	"在顶部 (替代)">
 <!ENTITY Ctr_nav_txt_ico0	"只显示图标 (默认)">
 <!ENTITY Ctr_nav_txt_ico1	"显示大图标">
 <!ENTITY Ctr_nav_txt_ico2	"显示图标和文本">
 <!ENTITY Ctr_nav_txt_ico3	"只显示文本">
 <!ENTITY Ctr_stoprel0		"Reload and stop button settings">
 <!ENTITY Ctr_stoprel1		"Toolbar: place reload button after stop button!">
+<!ENTITY Ctr_cpanelmenus	"更紧凑的面板菜单 (书签、历史等等)">
+<!ENTITY Ctr_hidezoomres	"当缩放控制按钮在工具栏上时: 隐藏重置缩放按钮">
+<!ENTITY Ctr_pmhidelabels	"面板菜单: 隐藏按钮标签">
+<!ENTITY Ctr_menupopupscr	"弹出式菜单: 用滚动栏代替滚动箭头">
 
-<!ENTITY Ctr_tab_tf_info	"可以使用颜色名称, hex 值, rgb(a) 以及 hsl(a) 值。输入错误不会被提示！">
-<!ENTITY Ctr_tabacthovdef	"标签页 (激活/悬停/默认)">
-<!ENTITY Ctr_tabnorunrnew	"标签页 (未读/unloaded) / 新标签页">
+<!ENTITY Ctr_fxmockup		"火狐样式">
+<!ENTITY Ctr_tabmokcolor	"白色标签页按钮 (关闭, 新建, 分组, 显示所有)">
+<!ENTITY Ctr_tabmokcolor2	"在非激活标签页上使用白色文字以及添加文字阴影">
+<!ENTITY Ctr_tabmokcolor3	"白色标签页分隔符">
+
+<!ENTITY Ctr_tab_tf_info1	"可以使用颜色名称, hex 值, rgb(a) 以及 hsl(a) 值。">
+<!ENTITY Ctr_tab_tf_info2	"输入错误不会被提示！">
+<!ENTITY Ctr_tabact_t		"激活">
+<!ENTITY Ctr_tabhov_t		"悬停">
+<!ENTITY Ctr_tabnor_t		"默认">
+<!ENTITY Ctr_tabpen_t		"unloaded">
+<!ENTITY Ctr_tabunr_t		"未读">
+<!ENTITY Ctr_ntab_t			"新标签页">
 <!ENTITY Ctr_customsqtab0	"自定义标签页颜色">
 <!ENTITY Ctr_customsqtab1	"背景">
 <!ENTITY Ctr_ctext			"文本">
@@ -116,22 +129,15 @@
 <!ENTITY Ctr_bold			"加粗">
 <!ENTITY Ctr_italic			"斜体">
 
-<!ENTITY Ctr_toolbars		"工具栏">
-<!ENTITY Ctr_altmenubar		"菜单栏: 添加背景颜色 (OS 标题栏)">
-<!ENTITY Ctr_altmenubarpos	"Menubar: alternative position (below Firefox titlebar)">
-<!ENTITY Ctr_noaddonbarbg	"Add-on bar: remove background color (Windows AeroGlass / Win8)">
-<!ENTITY Ctr_menubarnofog	"菜单栏: 移除背景颜色/模糊 (Windows AeroGlass / Win8)">
-<!ENTITY Ctr_notabfog		"Tabs toolbar: remove background fog (Windows AeroGlass / Win8)">
-<!ENTITY Ctr_notabbg		"Tabs toolbar: remove background color (Windows AeroGlass / Win8)">
-<!ENTITY Ctr_highaddonsbar	"增加附加组件栏高度">
-<!ENTITY Ctr_hightabpos		"标签页栏: 减少工具栏上方空间 (如果可以)">
-
-<!ENTITY Ctr_toolbars2		"工具栏 ('标签栏不在顶部' 模式 &amp; Windows AeroGlass / Win8)">
-<!ENTITY Ctr_nobookbarbg	"书签栏: 移除背景颜色">
-<!ENTITY Ctr_nonavbarbg		"导航栏: 移除背景颜色">
-<!ENTITY Ctr_nonavborder	"书签栏: 添加上边框">
-<!ENTITY Ctr_nonavtbborder	"顶部工具栏: 移除工具栏边框">
-<!ENTITY Ctr_alttabstb		"标签页栏: 替代的背景颜色">
+<!ENTITY Ctr_favicon		"Favicon settings">
+<!ENTITY Ctr_emptyfavicon	"使用空白网站小图标 (如果网站没有提供)">
+<!ENTITY Ctr_emptyfavicon2	"Replace generic favicon (empty and dotted) with sheet favicon">
+<!ENTITY Ctr_faviconurl		"Favicon in urlbar (restart Firefox!)">
+<!ENTITY Ctr_padlock_hid	"Padlock (hidden)">
+<!ENTITY Ctr_padlock_def	"Padlock (default)">
+<!ENTITY Ctr_padlock_cla	"Padlock (classic)">
+<!ENTITY Ctr_padlock_mod	"Padlock (modern)">
+<!ENTITY Ctr_padlock_ext	"Security icons">
 
 <!ENTITY Ctr_invicons		"Inverted icons">
 <!ENTITY Ctr_menubar		"菜单栏">
@@ -139,28 +145,27 @@
 <!ENTITY Ctr_navbar			"导航栏">
 <!ENTITY Ctr_bookbar		"书签栏">
 
-<!ENTITY Ctr_specialtw		"特殊设置">
-<!ENTITY Ctr_emptyfavicon	"使用空白网站小图标 (如果网站没有提供)">
-<!ENTITY Ctr_emptyfavicon2	"Replace generic favicon (empty and dotted) with sheet favicon">
-<!ENTITY Ctr_bfurlbarfix	"当处于「后退」按钮可以移动和小图标显示模式时，修改地址栏圆弧半径">
-<!ENTITY Ctr_cpanelmenus	"更紧凑的面板菜单 (书签、历史等等)">
-<!ENTITY Ctr_hidezoomres	"当缩放控制按钮在工具栏上时: 隐藏重置缩放按钮">
-<!ENTITY Ctr_pmhidelabels	"面板菜单: 隐藏按钮标签">
-<!ENTITY Ctr_menupopupscr	"弹出式菜单: 用滚动栏代替滚动箭头">
-<!ENTITY Ctr_hideprivmask	"隐私浏览: 隐藏面具标志">
+<!ENTITY Ctr_toolbars		"工具栏">
+<!ENTITY Ctr_dblclnewtab	"双击新建标签页 (在 browser.newtab.url 设置)">
+<!ENTITY Ctr_hidetbwot		"Hide tabs toolbar with one tab (restart Firefox!)">
+<!ENTITY Ctr_notabfog		"Remove background fog (Windows AeroGlass / Win8)">
+<!ENTITY Ctr_notabbg		"Remove background color (Windows AeroGlass / Win8)">
+<!ENTITY Ctr_hightabpos		"减少工具栏上方空间 (如果可以)">
+<!ENTITY Ctr_alttabstb		"替代的背景颜色">
 
-<!ENTITY Ctr_fxmockup		"火狐样式">
-<!ENTITY Ctr_tabmokcolor	"白色标签页按钮 (关闭, 新建, 分组, 显示所有)">
-<!ENTITY Ctr_tabmokcolor2	"在非激活标签页上使用白色文字以及添加文字阴影">
-<!ENTITY Ctr_tabmokcolor3	"白色标签页分隔符">
+<!ENTITY Ctr_altmenubar		"添加背景颜色 (OS 标题栏)">
+<!ENTITY Ctr_altmenubarpos	"Alternative position (below Firefox titlebar)">
+<!ENTITY Ctr_menubarnofog	"移除背景颜色/模糊 (Windows AeroGlass / Win8)">
 
-<!ENTITY Ctr_dblclnewtab	"标签页栏: 双击新建标签页 (在 browser.newtab.url 设置)">
-<!ENTITY Ctr_hidetbwot		"标签页栏: hide tabs toolbar with one tab (restart Firefox!)">
-<!ENTITY Ctr_faviconurl		"Favicon in urlbar (restart Firefox!)">
-<!ENTITY Ctr_faviconurl2	"Padlock">
-<!ENTITY Ctr_dblclclosefx	"火狐按钮: 双击关闭当前窗口">
-<!ENTITY Ctr_hide_bf_popup	"可移动的后退按钮: 鼠标长按时隐藏历史菜单">
-<!ENTITY Ctr_verifiedcolors	"Green/blue identity-box for verified websites">
+<!ENTITY Ctr_hidenavbar		"隐藏工具栏">
+<!ENTITY Ctr_nobookbarbg	"书签栏: 移除背景颜色">
+<!ENTITY Ctr_nonavbarbg		"导航栏: 移除背景颜色">
+<!ENTITY Ctr_nonavborder	"书签栏: 添加上边框">
+<!ENTITY Ctr_nonavtbborder	"顶部工具栏: 移除工具栏边框">
+
+<!ENTITY Ctr_closeabarbut	"隐藏附加组件栏关闭按钮">
+<!ENTITY Ctr_highaddonsbar	"增加附加组件栏高度">
+<!ENTITY Ctr_noaddonbarbg	"Remove background color (Windows AeroGlass / Win8)">
 
 <!ENTITY Ctr_animation		"动画">
 <!ENTITY Ctr_throbberalt	"使用替代的动画效果">
@@ -169,11 +174,11 @@
 <!ENTITY Ctr_tabanimation	"打开/关闭标签页时显示动画 (about:config)">
 <!ENTITY Ctr_dlanimation	"'下载提醒' 显示动画 (about:config)">
 
-<!ENTITY Ctr_closeabarbut	"隐藏附加组件栏关闭按钮">
 <!ENTITY Ctr_toolsitem		"在工具菜单中显示">
 <!ENTITY Ctr_appmenuitem	"在火狐按钮菜单中显示">
 <!ENTITY Ctr_contextitem	"Menuitem in toolbars context menu">
 <!ENTITY Ctr_cuibotbuttons	"在界面自定义模式中显示更多按钮">
+
 
 <!ENTITY Ctr_pw_settings	"Settings">
 <!ENTITY Ctr_pw_set_reset	"Restore defaults">
@@ -182,7 +187,7 @@
 <!ENTITY Ctr_pw_set_import	"Import preferences">
 
 <!ENTITY Ctr_special_font	"Background color settings are for default theme only!">
-<!ENTITY Ctr_special_info	"Some options only offer visual changes in certain cases!">
+<!ENTITY Ctr_special_info	"Some options may offer visual changes in certain cases only!">
 <!ENTITY Ctr_special_info2	"Settings are made for Firefox default theme and may not work with all third party themes!">
 <!ENTITY Ctr_support		"支持讨论区">
 <!ENTITY Ctr_newversion		"有新版本?">
